# xdatbus

./: .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_vis.txt  setup.py  test.py
.github/: dependabot.yml
.github/workflows/: anaconda-publish.yml  build.yaml  build.yml  github-publish.yml  pypi-publish.yml  python-publish.yml  quarto-publish.yml
XDATBUS/: car2bus.py  xdatbus_utils.py
XDATBUS/xdatcar_files_raw/: XDATCAR_1  XDATCAR_10  XDATCAR_13  XDATCAR_15  XDATCAR_17  XDATCAR_4  XDATCAR_5  XDATCAR_8  XDATCAR_9
XDATBUS/xdatcar_files_wrap/: XDATCAR_10  XDATCAR_11  XDATCAR_12  XDATCAR_13  XDATCAR_2  XDATCAR_4  XDATCAR_5  XDATCAR_7
conda/: conda-requirements.txt  meta.yaml
docs/: conf.py  requirements.in  requirements.txt
docs/source/: conf.py  index.rst  installation.rst
docs/source/examples/: example1.rst  example2.rst  example3.rst
docs/source/getting_started/: installation.rst
docs/source/usage/: application_programming_interface.rst  code.rst  command_line_interface.rst  programming_interface.rst
examples/: basics.ipynb  blender.ipynb  blender_color.py  blender_model.py  blender_model_llto.py  blender_test.py  free_energy_surface.ipynb  trajectory_operations.ipynb
examples/02_load_report/: load_report.py
examples/example_1/: test1.py
examples/metad/: REPORT
examples/metad/RUN1/: REPORT
examples/metad/RUN2/: REPORT
prospectus/: nioh3.poscar
prospectus/llto/: la_rich.poscar  llto.py  llto_n0_ov0.poscar  mid.poscar
quarto/: CNAME  _quarto.yml
quarto/_site/: about.html  index.html  search.json
quarto/_site/site_libs/bootstrap/: bootstrap.min.css
resources/: h2o.blend
tests/: test_bash01_bias.py  test_f01_aggregate.py  test_f01_xdc_aggregate.py  test_f02_unwrap.py  test_f02_xdc_unwrap.py  test_f03_unwrap_xyz.py  test_f03_xyz_unwrap.py  test_fm01_xdatcar2xtc.py  test_fm01_xdc2xtc.py  test_fmtd01_xdc2xtc.py  test_fmtd04_xdc2xtc.py  test_fmtd06_xdc2xtc.py  test_fmtd07_neb.py
tests/data/hills/: HILLS
tests/data/hillspot/: HILLSPOT_1D  HILLSPOT_2D  HILLSPOT_3D
tests/data/npy/: fes_2d.npy  fes_data_3d.npy
tests/data/oszicar/: OSZICAR  OSZICAR_01  OSZICAR_02
tests/data/outcar/: OUTCAR
tests/data/poscar/: POSCAR
tests/data/vasprun/: POTCAR  vasprun.xml
tests/data/xyz/: trj.xyz
xdatbus/: __init__.py  bash01_bias.py  bash01_sum_hills.py  c02a_xdc_unwrap.py  f01_aggregate.py  f01_xdc_aggregate.py  f02_unwrap.py  f02_xdc_unwrap.py  f03_unwrap_xyz.py  f03_xyz_unwarp.py  fbld01_pos2bpdb.py  fbld02_rm_bond.py  fbld02_rmbond.py  fbld03_yaml_gen.py  fcli.py  fcom01_drift.py  fcom02_contcar.py  fcom02_hillspot.py  fcom03_contcar.py  fdash01_plot_fes.py  fm01_xdatcar2xtc.py  fm01_xdc2xtc.py  fm02_hillspot2hills.py  fm03_report_loader.py  fmeta01_pos2bpdb.py  fml01_xml2xyz.py  fmtd01_fes.py  fmtd01_fes1d.py  fmtd01_xdc2xtc.py  fmtd02_fes2d.py  fmtd03_fes3d.py  fmtd03_report_loader.py  fmtd04_hillspot2hills.py  fmtd04_plot_fes.py  fmtd04_plotfes.py  fmtd06_fes_project.py  fmtd06_pmf_3d.py  fmtd06_xdc2xtc.py  fmtd07_neb.py  fmtd07_reweight.py  (+11 more)
xdatbus-dev/: __init__.py  f03_xyz_unwarp.py  f05_ovito_vis.py  fcom02_hillspot.py  fmtd04_3dfes.py  test_f03_xyz_unwrap.py
xdatbus/resources/: Chem_Data.py  color_data.yaml  h2o.blend  plumed_run.sh  sum_hills.sh  vis_data.yaml
xdatbus_deprecated/: car2bus.py  ovito_animation.py
xdatbus_deprecated/xdatcar_files_raw/: XDATCAR_11  XDATCAR_12  XDATCAR_14  XDATCAR_16  XDATCAR_2  XDATCAR_3  XDATCAR_6  XDATCAR_7
xdatbus_deprecated/xdatcar_files_wrap/: XDATCAR_1  XDATCAR_14  XDATCAR_15  XDATCAR_16  XDATCAR_17  XDATCAR_3  XDATCAR_6  XDATCAR_8  XDATCAR_9
xdatbus_package/: __init__.py  f01_aggregate.py  fcom01_drift.py  fm03_3dfes.py
