[tool.poetry]
name = "xdatbus"
version = "0.2.7"
description = "A Python package for post-analysis of VASP AIMD data"
authors = ["Jiacheng Wang <jiachengwang@umass.edu>"]
maintainers = ["Jiacheng Wang"]
license = "MIT"
readme = "README.md"
homepage = "https://xdatbus.readthedocs.io/en/latest/"
repository = "https://github.com/jcwang587/xdatbus/"
documentation = "https://xdatbus.readthedocs.io/en/latest/"

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

keywords = ["python", "aimd", "vasp", "xdatcar"]

include = [
    "xdatbus/resources/node_data.blend",
    "xdatbus/resources/color_data.yaml"
]

exclude = [
    "xdatbus-dev",
    "misc"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "1.26.4"
pandas = "2.2.1"
pyarrow = "15.0.1"
ase = "3.22.1"
pymatgen = "2024.3.1"
mdanalysis = "2.7.0"
rich = "13.7.1"
plotly = { version = "5.20.0", optional = true }
dash = { version = "2.16.1", optional = true }
rdkit = { version = "2023.9.5", optional = true }
bpy = { version = "4.0.0", markers = "python_version == '3.10.*'", optional = true }
pyyaml = { version = "6.0.1", optional = true }
ovito = { version = "3.10.4", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"
pytest-cov = "4.1.0"

[tool.poetry.extras]
meta = ["rdkit", "bpy", "pyyaml", "ovito"]
dash = ["plotly", "dash"]

[tool.poetry.scripts]
xdc_aggregate = "xdatbus.f01_xdc_aggregate:main"
xdc_unwrap = "xdatbus.f02_xdc_unwrap:main"
thermal_report = "xdatbus.fosz01_thermal_report:main"
xml2xyz = "xdatbus.fml01_xml2xyz:main"
bias = "xdatbus.bash01_bias:main"
plot_fes = "xdatbus.fmtd04_plot_fes:main"
xdatbus = "xdatbus.fcli:main"

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"
