[tool.poetry]
name = "xdatbus"
version = "0.3.2"
description = "A Python package enhancing VASP AIMD simulation"
authors = ["Jiacheng Wang <jiachengwang@umass.edu>"]
maintainers = ["Jiacheng Wang"]
license = "MIT"
readme = "README.md"
homepage = "https://xdatbus.readthedocs.io/en/latest/"
repository = "https://github.com/jcwang587/xdatbus/"
documentation = "https://xdatbus.readthedocs.io/en/latest/"

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

keywords = ["python", "aimd", "vasp", "xdatcar"]

include = [
    "xdatbus/resources/node_data.blend",
    "xdatbus/resources/color_data.yaml"
]

exclude = [
    "xdatbus-dev",
    "misc"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ase = "3.23.0"
mdanalysis = "2.7.0"
numpy = "1.26.4"
pandas = "2.2.2"
pyarrow = "16.1.0"
pymatgen = "2024.6.10"
rich = "13.7.1"
statsmodels = "0.14.2"
bpy = { version = "4.0.0", markers = "python_version == '3.10.*'", optional = true }
dash = { version = "2.17.1", optional = true }
ovito = { version = "3.10.6.post2", optional = true }
plotly = { version = "5.22.0", optional = true }
pyyaml = { version = "6.0.1", optional = true }
rdkit = { version = "2024.3.1", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"

[tool.poetry.extras]
meta = ["rdkit", "bpy", "pyyaml", "ovito"]
dash = ["plotly", "dash"]

[tool.poetry.scripts]
xdc_aggregate = "xdatbus.f01_xdc_aggregate:main"
xdc_unwrap = "xdatbus.f02_xdc_unwrap:main"
thermal_report = "xdatbus.fosz01_thermal_report:main"
xml2xyz = "xdatbus.fml01_xml2xyz:main"
bias = "xdatbus.bash01_bias:main"
plot_fes = "xdatbus.fmtd04_plot_fes:main"
xdatbus = "xdatbus.fcli:main"

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"
