[tool.poetry]
name = "xdatbus"
version = "0.3.8"
description = "A Python package enhancing VASP AIMD simulation"
authors = ["Jiacheng Wang <jiachengwang@umass.edu>"]
maintainers = ["Jiacheng Wang"]
license = "MIT"
readme = "README.md"
homepage = "https://xdatbus.readthedocs.io/en/latest/"
repository = "https://github.com/jcwang587/xdatbus/"
documentation = "https://xdatbus.readthedocs.io/en/latest/"

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

keywords = ["python", "aimd", "vasp", "xdatcar"]

include = [
    "xdatbus/resources/node_data.blend",
    "xdatbus/resources/color_data.yaml"
]

exclude = [
    "xdatbus-dev",
    "misc"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ase = "^3.23.0"
mdanalysis = "^2.7.0"
numpy = "*"
pandas = "*"
pyarrow = "*"
pymatgen = "^2025.1.0"
rich = "*"
statsmodels = "*"
bpy = { version = "4.3.0", markers = "python_version == '3.11.*'", optional = true }
ovito = { version = "*", optional = true }
plotly = { version = "6.0.0", optional = true }
dash = { version = "2.18.2", optional = true }
pyyaml = { version = "6.0.2", optional = true }
rdkit = { version = "2024.9.5", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-cov = "6.0.0"

[tool.poetry.extras]
meta = ["rdkit", "bpy", "pyyaml", "ovito"]
dash = ["plotly", "dash"]

[tool.poetry.scripts]
xdc_aggregate = "xdatbus.f01_xdc_aggregate:main"
xdc_unwrap = "xdatbus.f02_xdc_unwrap:main"
thermal_report = "xdatbus.fosz01_thermal_report:main"
xml2xyz = "xdatbus.fml01_xml2xyz:main"
bias = "xdatbus.bash01_bias:main"
plot_fes = "xdatbus.fmtd04_plot_fes:main"
xdatbus = "xdatbus.fcli:main"

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"
